# mts

./: .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  README.md  hello.py  pyproject.toml  setup_project.py
src/mts/: main.py  orchestrator.py
src/mts/adk_agents/: morpheus_agent.py  neo_agent.py  oracle_agent.py  trinity_agent.py
src/mts/adk_tools/: risk_tools.py  trading_tools.py
src/mts/core/: config.py
src/mts/models/: __init__.py  base.py  execution.py  market.py  metrics.py  patterns.py  risk.py
src/mts/services/: hyperliquid.py  paper_trading.py
tests/: test_agent.py  test_basic_imports.py  test_imports.py  test_models.py
